WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270020
REGRESSION(274626main): Unable to exit fullscreen on tvOS
https://bugs.webkit.org/show_bug.cgi?id=270020
Summary
REGRESSION(274626main): Unable to exit fullscreen on tvOS
Andy Estes
Reported
2024-02-23 15:52:58 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-23 15:53:20 PST
<
rdar://problem/123534305
>
Andy Estes
Comment 2
2024-02-23 15:55:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25045
Tim Nguyen (:ntim)
Comment 3
2024-02-24 12:17:14 PST
***
Bug 270019
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2024-02-25 12:29:04 PST
Committed
275295@main
(c515c4be3ed6): <
https://commits.webkit.org/275295@main
> Reviewed commits have been landed. Closing PR #25045 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug