REGRESSION(274626main): Unable to exit fullscreen on tvOS https://bugs.webkit.org/show_bug.cgi?id=270020 rdar://123534305

Reviewed by Jer Noble.

When refactoring VideoPresentationInterfaceAVKit in 274626main we inadvertently removed
WebAVPlayerViewControllerDelegate's conformance to -playerViewControllerShouldDismiss:, which broke
the ability to exit fullscreen on tvOS. Restored the delegate method.

* Source/WebCore/platform/ios/VideoPresentationInterfaceAVKit.mm:
(-[WebAVPlayerViewControllerDelegate playerViewControllerShouldDismiss:]):

Canonical link: https://commits.webkit.org/275295@main